# sci-figure

./: .gitignore  README.md  SKILL.md  requirements.txt
agents/: openai.yaml
lib/: pyproject.toml
lib/sci_figure_lib/: __init__.py  drawio_builder.py  glyphs.py  layout.py  matplotlib_helpers.py  render.py
lib/tests/: test_semantic_helpers.py
references/: anti-patterns.md  asset-strategy.md  design.md  layout.md  notation.md  quality-bar.md  review-render.md  trigger-evals.md  typography.md  workflow.md
references/exemplars/: README.md  numbered-modular-feedback-map.md  two-row-failure-fix-iterative-readout.md  two-row-training-inference.md
scripts/: bootstrap_env.sh  new_figure.sh  refresh_drawio_skill.sh  verify_aspect_ratios.py
templates/: Makefile.tmpl  generate_assets.py.tmpl  generate_figure.py.tmpl  requirements.md.tmpl
