[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-figure-lib"
version = "0.1.0"
description = "Library helpers for the sci-figure conference-figure workflow"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sci-figure" }]
dependencies = [
  "Pillow>=11",
  "matplotlib>=3.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sci_figure_lib*"]
